--- a/basic/package.json
+++ b/basic/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/sathish257216/learning-react#readme",
   "devDependencies": {
     "parcel": "^2.12.0"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
