food tech app created

--- a/basic/package.json
+++ b/basic/package.json
@@ -4,6 +4,7 @@
   "description": "Learn React basic",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "jest"
   },
   "repository": {
@@ -20,7 +21,8 @@
   },
   "homepage": "https://github.com/sathish257216/learning-react#readme",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.3.1",
